- Set adapter colspan (nested lists and forms) using javascript, fixed issue when active_scaffold_config_list is used
- Fix bug saving default values when get method is overrided on model to return default value
- Fix close action_link without adapter
- Fix update calculations after destroy a row
- Fix count and calculate searching with count_includes
- Fix action_after_create

= 3.3.0
- Unify field overrides and list_ui method signatures
- Improve performance removing some partials and adding some caching for helper overrides and UIs, and caching url generation for lists (caching url is optional)
- Drop support for rails 3.1
- Add HTML5 form fields
- Add :chosen form_ui, and :chosen and :multi_chosen search_ui
- Fix nested with has_one associations, and belongs_to associations with :list action
- Support optgroup in :select and :chosen form_ui
- Support render_form_field with multiple rows (rows with associated-record class)
- Support for updating columns, row or table after updating a column with inplace_edit
- Keep order for records in plural subforms, so new records are saved in same order as form order
- Support add_subgroup in horizontal subforms
- Improve support in helpers for using :select form_ui with polymorphic associations (needs to use a select to choose the class)
- Allow to create in nested has_many :through associations, when source association is a belongs_to
- Fix calculations using field_search with has_many includes
- Add support to ActiveScaffold.create_record_row to insert after or before of an element
- Add support for dynamic action group
- Improve parsing of datetimes
- Add support for lists filtered by id (one-item lists)
- Fix update_columns with sending whole big forms
- Improve update_columns on subforms
- Support to override ActiveScaffold.remove so effects can be added on page elements deletion
- Add support for conversion methods in controller, so form_uis can define how to convert params to values